--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "mongoose": "^5.6.13",
+    "nodemailer": "^6.3.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
