--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "mongoose": "^5.6.13",
+    "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^3.3.3"
