--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
+    "helmet": "^3.21.0",
     "mongoose": "^5.6.13",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
